# embedded-comm-kit

./: CMakeLists.txt  README.md  main.c
include/: BIT_MATH.h  MemScanner.h  MessagrCodec.h  STD_TYPES.h
src/: MemScanner.c  MessageCodec.c
